--- a/src/pages/CompleteProfile.module.css
+++ b/src/pages/CompleteProfile.module.css
@@ -154,6 +154,24 @@ input[type="file"] {
   transition: 500ms;
 }
 
+.textarea {
+  width: 90vw;
+  background-color: #ffffff;
+  border-radius: 1vh;
+  margin: auto;
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  border: none;
+  box-sizing: border-box;
+  padding: 2vh;
+  font-size: 1.2rem;
+  border: 1px solid rgba(128, 128, 128, 0.515);
+}
+
+.textarea::placeholder {
+  font-size: 1.2rem;
+}
+
 @media only screen and (min-width: 760px) {
   .form {
     width: 50%;
