--- a/src/pages/CreateEvent.module.css
+++ b/src/pages/CreateEvent.module.css
@@ -57,6 +57,24 @@
   background-color: #e996627b;
 }
 
+.input {
+  text-align: center;
+  width: 58vw;
+  box-sizing: border-box;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border: none;
+  box-shadow: 0 0 1px 2px rgba(180, 179, 179, 0.167);
+  border-radius: 2vh;
+  background-color: #fff;
+  font-size: 2vh;
+  margin-top: 2.4vh;
+}
+
+.input:focus {
+  outline: none;
+}
+
 .card {
   margin-top: 2.4vh;
   width: 58vw;
@@ -70,6 +88,12 @@
   height: 100%;
   width: 12vw;
   border-radius: 2vh;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .info {
@@ -98,12 +122,6 @@
 }
 .dateInput:focus {
   border: none;
-}
-
-.aboutTitle {
-  text-align: center;
-  margin-top: 3vh;
-  font-size: 2vh;
 }
 
 .textarea {
