--- a/src/pages/UserSearch.module.css
+++ b/src/pages/UserSearch.module.css
@@ -1,6 +1,6 @@
 .userSearch {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   /* display: flex;
   flex-direction: column; */
   /* align-items: center; */
@@ -9,7 +9,7 @@
 }
 
 .header {
-  height: 7vh;
+  height: 7%;
   width: 100vw;
   background-color: #ea9b6b;
   display: flex;
@@ -27,7 +27,7 @@
 .searchInp {
   width: 60vw;
   font-size: 2vh;
-  height: 4vh;
+  height: 55%;
   box-sizing: border-box;
   padding-left: 2vh;
   border-radius: 3vh;
