--- a/src/components/General/Footer.module.css
+++ b/src/components/General/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
   background-color: #f1edeba5;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 10vh;
   bottom: 0px; /* required */
   display: flex;
