--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,6 +1,6 @@
 .home {
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh; */
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,8 +10,8 @@
 }
 
 .header {
-  height: 18vh;
-  width: 100vw;
+  height: 18%;
+  width: 100%;
   background-color: #ea9b6b;
   border-bottom-left-radius: 7vh;
   border-bottom-right-radius: 7vh;
@@ -33,17 +33,17 @@
 .search {
   position: absolute;
   right: 4vw;
-  top: 4vh;
+  top: 4%;
 }
 
-.location {
+.username {
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
   font-size: 2.5vh;
   position: absolute;
-  top: 9vh;
+  top: 7%;
   margin-bottom: 0vh;
 }
 
@@ -59,7 +59,7 @@
   justify-content: space-around;
   width: 60vw;
   position: absolute;
-  top: 13vh;
+  top: 12%;
 }
 
 .input {
