--- a/src/pages/Mapp.module.css
+++ b/src/pages/Mapp.module.css
@@ -1,9 +1,42 @@
 .map {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  animation: up 500ms ease-in forwards;
+  transition: 500ms;
 }
 
 .mapContainer {
   width: 100vw;
   height: 100vh;
 }
+
+.btn {
+  width: 40vw;
+  border-radius: 2vh;
+  border: none;
+
+  background-color: orange;
+  z-index: 4;
+  position: absolute;
+  margin: auto;
+  font-size: 2vh;
+  color: white;
+  font-weight: 600;
+  letter-spacing: 2px;
+  transition: 500ms;
+}
+
+/* @keyframes up {
+  from {
+    transform: translateY(100vh);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0vh);
+    opacity: 1;
+  }
+} */
