--- a/src/pages/UserSearch.module.css
+++ b/src/pages/UserSearch.module.css
@@ -22,6 +22,7 @@
   justify-content: space-between;
   padding-left: 3vw;
   padding-right: 3vw;
+  animation: slide-down 500ms ease-in forwards;
 }
 
 .searchInp {
@@ -112,9 +113,11 @@
 @keyframes opacity-up {
   0% {
     opacity: 0;
+    transform: translateX(-50vw);
   }
 
   100% {
     opacity: 1;
+    transform: translateX(0vw);
   }
 }
