--- a/src/pages/Mapp.module.css
+++ b/src/pages/Mapp.module.css
@@ -1,5 +1,5 @@
 .map {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -21,7 +21,7 @@
 
   background-color: orange;
   z-index: 4;
-  position: absolute;
+  position: fixed;
   margin: auto;
   font-size: 2vh;
   color: white;
