--- a/src/pages/CreateEvent.module.css
+++ b/src/pages/CreateEvent.module.css
@@ -1,6 +1,7 @@
 .profile {
   height: 100vh;
   width: 100vw;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,7 +37,7 @@
 
 .label {
   margin: auto;
-  height: 20vh;
+  height: 20%;
   width: 40vw;
   margin-top: 3vh;
   margin-bottom: 3vh;
@@ -48,7 +49,7 @@
 }
 
 .img {
-  height: 22vh;
+  height: 100%;
   width: 40vh;
   /* border-radius: 50%; */
   transition: 500ms;
@@ -80,7 +81,7 @@
 .card {
   margin-top: 2.4vh;
   width: 58vw;
-  height: 6vh;
+  height: 6%;
   box-shadow: 0 0 1px 2px rgba(180, 179, 179, 0.167);
   display: flex;
   border-radius: 2vh;
@@ -93,6 +94,7 @@
 }
 
 .form {
+  height: 85%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -140,7 +142,7 @@
 .registerBtn {
   width: 75vw;
   border-radius: 2vh;
-  height: 7vh;
+  height: 7%;
   background-color: #e99562;
   color: white;
   display: flex;
@@ -149,7 +151,7 @@
   margin: auto;
   border: none;
   font-size: 2.3vh;
-  margin-top: 7vh;
+  margin-top: 3vh;
 }
 
 @keyframes up {
