--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -19,6 +19,21 @@
   justify-content: center;
 }
 
+.backBtn {
+  position: absolute;
+  left: 5vw;
+  margin-top: 2vh;
+}
+
+.pageTitle {
+  position: absolute;
+  left: 15vw;
+  margin-top: 2vh;
+  font-weight: 300;
+  font-size: 2.8vh;
+  color: black;
+}
+
 .signOutBtn {
   position: absolute;
   right: 4vw;
