--- a/src/pages/Mapp.module.css
+++ b/src/pages/Mapp.module.css
@@ -1,5 +1,5 @@
 .map {
-  height: 100%;
+  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -7,6 +7,7 @@
   align-items: center;
   animation: up 500ms ease-in forwards;
   transition: 500ms;
+  overflow-y: hidden;
 }
 
 .mapContainer {
@@ -18,7 +19,6 @@
   width: 40vw;
   border-radius: 2vh;
   border: none;
-
   background-color: orange;
   z-index: 4;
   position: fixed;
@@ -26,7 +26,7 @@
   font-size: 2vh;
   color: white;
   font-weight: 600;
-  letter-spacing: 2px;
+  letter-spacing: 4px;
   transition: 500ms;
 }
 
