--- a/src/pages/Events.module.css
+++ b/src/pages/Events.module.css
@@ -31,6 +31,15 @@
   top: 5vh;
   font-weight: 300;
   font-size: 2.8vh;
+  color: black;
+}
+
+.pageTitle {
+  position: absolute;
+  left: 15vw;
+  top: 5vh;
+  font-weight: 300;
+  font-size: 2.8vh;
 }
 
 .tabContainer {
