--- a/src/components/Containers/OrgContainer.module.css
+++ b/src/components/Containers/OrgContainer.module.css
@@ -1,6 +1,6 @@
 .container {
   .container {
-    height: 70vh;
+    height: 65%;
     overflow-y: scroll;
     box-sizing: border-box;
     padding: 1vh;
