--- a/src/components/Cards/EventsCards/RegEventDetails.module.css
+++ b/src/components/Cards/EventsCards/RegEventDetails.module.css
@@ -22,12 +22,12 @@
 
 .title {
   margin-left: 4vw;
-  font-size: 3vh;
+  font-size: 1em;
   margin-bottom: 1vh;
 }
 .title2 {
   margin-left: 4vw;
-  font-size: 3vh;
+  font-size: 1em;
   margin-bottom: 4vh;
 }
 
