--- a/src/components/Cards/EventsCards/OrgEventCard.module.css
+++ b/src/components/Cards/EventsCards/OrgEventCard.module.css
@@ -1,6 +1,6 @@
 .eventCard {
   width: 90vw;
-  height: 11vh;
+  height: 90px;
   box-shadow: 0 0 1px 2px rgba(128, 128, 128, 0.167);
   margin-bottom: 1.3vh;
   display: flex;
@@ -9,9 +9,10 @@
 }
 
 .img {
-  height: 100%;
-  width: 20vw;
+  height: 85px;
+  width: 80px;
   border-radius: 2vh;
+  object-fit: cover;
 }
 
 .info {
