--- a/src/components/Cards/HomeCards/EventCard.module.css
+++ b/src/components/Cards/HomeCards/EventCard.module.css
@@ -1,6 +1,7 @@
 .eventCard {
-  width: 92vw;
-  height: 10vh;
+  width: 90vw;
+  height: 80px;
+  box-sizing: border-box;
   box-shadow: 0 0 1px 2px rgba(128, 128, 128, 0.167);
   margin-bottom: 1.3vh;
   display: flex;
@@ -10,8 +11,8 @@
 }
 
 .img {
-  height: 100%;
-  width: 20vw;
+  height: 80px;
+  width: 20%;
   border-radius: 2vh;
 }
 
@@ -23,7 +24,7 @@
 }
 
 .date {
-  font-size: 1.5vh;
+  font-size: 0.8em;
   color: #ea9b6b;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin-bottom: 1vh;
