--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -51,7 +51,7 @@
   margin-bottom: 1vh;
   font-weight: 500;
   letter-spacing: 0.2vh;
-  font-size: 2vh;
+  font-size: 1em;
 }
 
 .categoryContainer {
@@ -86,7 +86,12 @@
 
 .eventContainer {
   height: 65%;
+  width: 100vw;
   overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2%;
 }
 
 .img {
