--- a/src/components/Cards/EventsCards/OrgEventCard.module.css
+++ b/src/components/Cards/EventsCards/OrgEventCard.module.css
@@ -24,7 +24,7 @@
 }
 
 .date {
-  font-size: 1.5vh;
+  font-size: 1em;
   color: #ea9b6b;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   margin-bottom: 1vh;
