--- a/src/components/ProfileTabs/ProfileCards/PostCard.module.css
+++ b/src/components/ProfileTabs/ProfileCards/PostCard.module.css
@@ -1,10 +1,12 @@
 .postCard {
+  box-sizing: border-box;
   width: 90vw;
   box-shadow: 0 0 1px 2px rgba(128, 128, 128, 0.167);
   margin-top: 2vh;
   display: flex;
   flex-direction: column;
   border-radius: 1vh;
+  padding: 2vw;
 }
 
 .img {
@@ -17,6 +19,17 @@
 .likes {
   box-sizing: border-box;
   padding: 1vh;
+}
+
+.eventTitle {
+  box-sizing: border-box;
+  /* padding: 1vh; */
+  margin-top: 1.5vw;
+  margin-left: 2vw;
+  margin-bottom: 2vw;
+  font-size: 1.3em;
+  display: flex;
+  flex-direction: column;
 }
 
 .text {
