--- a/src/components/ProfileTabs/ProfileCards/PostCard.module.css
+++ b/src/components/ProfileTabs/ProfileCards/PostCard.module.css
@@ -1,4 +1,5 @@
 .postCard {
+  position: relative;
   box-sizing: border-box;
   width: 90vw;
   box-shadow: 0 0 1px 2px rgba(128, 128, 128, 0.167);
@@ -7,6 +8,7 @@
   flex-direction: column;
   border-radius: 1vh;
   padding: 2vw;
+  transition: 500ms;
 }
 
 .img {
@@ -16,9 +18,37 @@
   margin-bottom: 2vh;
 }
 
-.likes {
+.inp {
   box-sizing: border-box;
-  padding: 1vh;
+  width: 80%;
+  height: 40px;
+  margin-left: 3vw;
+  margin-top: 5px;
+  transition: 500ms;
+  animation: down 500ms ease-in forwards;
+  border-radius: 5px;
+  padding: 5px;
+  border: 1px solid rgba(128, 128, 128, 0.401);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.9em;
+}
+
+.btn {
+  margin-top: 5px;
+  box-sizing: border-box;
+  width: 20%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: orange;
+  border: none;
+}
+
+.inp:focus {
+  outline: none;
 }
 
 .eventTitle {
@@ -37,4 +67,19 @@
   padding: 1vh;
   display: flex;
   flex-direction: column;
+}
+
+.info {
+  animation: down 500ms ease-in forwards;
+}
+
+@keyframes down {
+  from {
+    opacity: 0;
+    transform: translateY(-3vh);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0vh);
+  }
 }
