--- a/src/pages/UserSearch.module.css
+++ b/src/pages/UserSearch.module.css
@@ -1,5 +1,4 @@
 .userSearch {
-  height: 100vh;
   width: 100%;
   /* display: flex;
   flex-direction: column; */
@@ -27,7 +26,7 @@
 
 .searchInp {
   width: 60vw;
-  font-size: 2vh;
+  font-size: 1em;
   height: 55%;
   box-sizing: border-box;
   padding-left: 2vh;
@@ -39,25 +38,6 @@
   outline: none;
 }
 
-.location {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  font-size: 2.5vh;
-  position: absolute;
-  top: 9vh;
-  margin-bottom: 0vh;
-}
-
-.categoryContainer {
-  display: flex;
-  justify-content: space-around;
-  width: 60vw;
-  position: absolute;
-  top: 13vh;
-}
-
 .input {
   box-sizing: border-box;
   padding: 2vw;
@@ -67,9 +47,9 @@
   box-shadow: 0 0 1px 2px rgba(234, 223, 203, 0.519);
   background-color: #eebd9f51;
   color: white;
-  height: 4vh;
+  height: 4%;
   z-index: 3;
-  font-size: 1.8vh;
+  font-size: 1em;
 }
 
 .input::placeholder {
@@ -81,14 +61,15 @@
 }
 
 .img {
-  width: 50%;
+  height: 70px;
+  width: 70px;
   height: auto;
   transform: scale(0.8);
   padding: 0px;
   margin: 0px;
 }
 
-@media only screen and (min-width: 760px) {
+/* @media only screen and (min-width: 760px) {
   .categoryContainer {
     display: flex;
     justify-content: space-around;
@@ -108,7 +89,7 @@
     margin-bottom: 2vh;
     margin-top: 2vh;
   }
-}
+} */
 
 @keyframes opacity-up {
   0% {
