--- a/src/pages/Events.module.css
+++ b/src/pages/Events.module.css
@@ -1,5 +1,4 @@
 .home {
-  height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -9,7 +8,7 @@
   animation: slide-down 500ms forwards;
 }
 .header {
-  height: 10vh;
+  height: 10%;
   width: 100vw;
   background: rgb(216, 124, 39);
   background: linear-gradient(
@@ -37,7 +36,7 @@
 .tabContainer {
   width: 70vw;
   margin: auto;
-  height: 5vh;
+  height: 5%;
   background-color: #c7c6c638;
   border-radius: 5vh;
   margin-top: 2vh;
