--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -13,15 +13,15 @@
   height: 18%;
   width: 100%;
   background-color: #ea9b6b;
-  border-bottom-left-radius: 7vh;
-  border-bottom-right-radius: 7vh;
+  border-bottom-left-radius: 3.5em;
+  border-bottom-right-radius: 3.5em;
   display: flex;
   align-items: center;
   box-sizing: border-box;
-  padding-top: 6vh;
+  padding-top: 6%;
   /* justify-content: center; */
   flex-direction: column;
-  margin-bottom: 2vh;
+  margin-bottom: 2%;
 }
 
 .notification {
@@ -41,14 +41,14 @@
   align-items: center;
   justify-content: center;
   color: white;
-  font-size: 2.5vh;
+  font-size: 1.4em;
   position: absolute;
   top: 7%;
   margin-bottom: 0vh;
 }
 
 .upcomingEvents {
-  margin-bottom: 1vh;
+  margin-bottom: 1%;
   font-weight: 500;
   letter-spacing: 0.2vh;
   font-size: 1em;
@@ -71,9 +71,9 @@
   box-shadow: 0 0 1px 2px rgba(234, 223, 203, 0.519);
   background-color: #eebd9f51;
   color: white;
-  height: 4vh;
+  height: 4%;
   z-index: 3;
-  font-size: 1.8vh;
+  font-size: 1em;
 }
 
 .input::placeholder {
@@ -102,7 +102,7 @@
   margin: 0px;
 }
 
-@media only screen and (min-width: 760px) {
+/* @media only screen and (min-width: 760px) {
   .categoryContainer {
     display: flex;
     justify-content: space-around;
@@ -122,7 +122,7 @@
     margin-bottom: 2vh;
     margin-top: 2vh;
   }
-}
+} */
 
 @keyframes slide-down {
   0% {
